SP20 materials update

--- a/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus.tex
+++ b/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus.tex
@@ -37,7 +37,7 @@
 % \newcommand{\myemail}{\href{mailto:aschissler@unr.edu}{aschissler@unr.edu}}
 \newcommand{\myemail}{aschissler@unr.edu}
 \newcommand{\office}{DMSC 224}
-\newcommand{\officehours}{TBD and by appointment}
+\newcommand{\officehours}{Mon/Tue 4-5pm and by appointment}
 % \newcommand{\university}{The University of Nevada, Reno}
 \renewcommand{\familydefault}{\sfdefault}
 
