--- a/rubrics/HW1_rubric.tex
+++ b/rubrics/HW1_rubric.tex
@@ -10,8 +10,8 @@
 
 \usepackage{agd-rubric}
 
-\rubriccourse{MATH 429/629 Introduction to Bayesian Statistics}
-\rubricterm{Spring 2019}
+\rubriccourse{STAT 446/646 Introduction to Bayesian Statistics}
+\rubricterm{Spring 2020}
 \rubricthing{Homework 1}
 \rubrictopprompt{Name}
 %% \rubricbottomprompt{Total Score}
