--- a/meeting_agendas/SP19/17_compare_bayes_freq_mean.Rmd
+++ b/meeting_agendas/SP19/17_compare_bayes_freq_mean.Rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r, echo = TRUE, results = TRUE}
 
-sleep <- c(10, 8, 7, 9, 8, 7.5, 5, 6.5, 7.5, 6, 11, 7, 8, 8.33, 8.25, 10, 6, 7, 8.5,8, 9, 9, 8, 9.5, 8, 9, 8.11, 7)
+sleep_times <- c(10, 8, 7, 9, 8, 7.5, 5, 6.5, 7.5, 6, 11, 7, 8, 8.33, 8.25, 10, 6, 7, 8.5,8, 9, 9, 8, 9.5, 8, 9, 8.11, 7)
 
 sd(sleep)
 
